# selenium

./: .gitignore  main.py  pyproject.toml  screen_size.py
